# bv-monitor

./: .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  bilibili.py  routes.py  scheduler.py  store.py
scripts/: install.sh  uninstall.sh
templates/: chart.html  index.html
